examples/failing/KindError.ps
data KindError f g a = One f a | Two f
